syntax = "proto3";
package cosmos.auth;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos/auth/auth.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/auth/types";

// Query creates service with Account and Parameters as rpc
service Query{
    // Account returns account details based on address
    rpc Account (QueryAccountRequest) returns (QueryAccountResponse) {}

    // Params queries all parameters
    rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {}
}

// QueryAccountRequest is request type for the Query/Account RPC method
message QueryAccountRequest{
    bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

// QueryAccountResponse is response type for the Query/Account RPC method
message QueryAccountResponse{
  google.protobuf.Any account = 1 [(cosmos_proto.accepts_interface) = "AccountI"];
}

// QueryParamsRequest is request type for the Query/Params RPC method
message QueryParamsRequest{ }

// QueryParamsResponse is response type for the Query/Params RPC method
message QueryParamsResponse{
  cosmos.auth.Params params = 1 [(gogoproto.nullable) = false];
} 
